<resources>
    <string name="app_name">DrinkWithMe</string>

    <string name="default_name">Алекс</string>
    <string name="default_weight">50</string>
    <string name="default_height">150</string>
    <string name="default_gender">@string/male</string>

    <string name="if_drink_app_text">Если выпить:</string>
    <string name="if_drink_alcohol_percent_app_text">Процент алкоголя в крови будет: </string>

    <string name="no_state_app_text">Проврка не проводилась</string>
    <string name="state_0_name_app_text">Легкое</string>
    <string name="state_1_name_app_text">Среднее</string>
    <string name="state_2_name_app_text">Сильное</string>
    <string name="state_3_name_app_text">Опасное</string>
    <string name="condition_app_text">состояние.</string>
    <string name="history_predict_app_text">Судя по истории, состояние будет: </string>
    <string name="no_history_predict_app_text">По истории ничего сказать нельзя.</string>

    <string name="percent_less_0_5_app_text">
        , все нормально.
    </string>
    <string name="percent_less_1_0_app_text">
        , возможно нарушение концентрации.
    </string>
    <string name="percent_less_2_0_app_text">
        , эмоциональное изменение в этом состоянии нормально.\nНарушена моторика, рефлексы, речь. Увеличено время реакции.
    </string>
    <string name="percent_less_3_0_app_text">
        , стоит задуматься о завершении.\nТяжелое нарушение моторики. Возможна потеря сознания, памяти.
    </string>
    <string name="percent_less_4_0_app_text">
        , пора заканчивать.\nПотеря сознания, памяти. Нарушение дыхания, сердцебиения. Утрата равновесия.\nДальше опасно!!!
    </string>
    <string name="percent_less_5_0_app_text">
        , нужно заканчивать!\nПолная потеря контроля за поведением. Тяжелое нарушение дыхания, сердцебиения. Потеря создания. Вероятность смерти.\nДальше некуда!!!
    </string>
    <string name="percent_more_5_0_app_text">
        , ОСТАНОВИСЬ!!!\nЭТО СМЕРТЕЛЬНО ОПАСНО!!!
    </string>

    <string name="dot_test_number">5</string>
    <string name="arithmetic_test_number">5</string>

    <string-array name="default_drinks">
        <item>Пиво</item>
        <item>Сидр</item>
        <item>Амстердам</item>
        <item>Водка</item>
        <item>Ликер</item>
        <item>Ром</item>
        <item>Коньяк</item>
        <item>Виски</item>
        <item>Чача</item>
        <item>Абсент</item>
        <item>Медицинский спирт</item>
    </string-array>
    <string-array name="default_percents">
        <item>2</item>
        <item>3</item>
        <item>7</item>
        <item>30</item>
        <item>40</item>
        <item>40</item>
        <item>40</item>
        <item>40</item>
        <item>60</item>
        <item>70</item>
        <item>100</item>
    </string-array>

    <string name="arithmetic_edit_hint">Введите ответ</string>
    <string name="answer">Ответить</string>
    
    <string name="alcohol_percent">Процент алкоголя в крови: </string>
    <string name="description_title">Объяснение:</string>
    <string name="current_state_title">Текущее состояние:</string>
    <string name="predict_title">Предсказание: </string>

    <string name="drink">Выпить</string>
    <string name="predict">Предсказать</string>
    <string name="test">Оценить состояние</string>
    <string name="new_group">Закрыть текущую историю</string>
    <string name="empty_history">Данная история пока что пустая\n</string>
    <string name="next_group_error">Текущая история пока что пустая</string>

    <string name="success">Верно</string>
    <string name="failure">Не верно</string>
    <string name="answer_empty_error">Ответ не должен быть пустым</string>

    <string name="current_history">Текущая история:</string>
    <string name="past_history">Прошлая история:</string>
    <string name="text_result">Состояние:</string>

    <string name="drink_name_hint">Название напитка</string>
    <string name="percent_hint">Крепость напитка</string>
    <string name="add">Добавть</string>
    <string name="confirm">Подтвердить</string>
    <string name="or_text">ИЛИ</string>
    <string name="liter_text">Количество литров</string>

    <string name="name_text">Имя:</string>
    <string name="name_hint">Имя</string>
    <string name="weight_text">Вес:</string>
    <string name="weight_hint">Вес</string>
    <string name="height_text">Рост:</string>
    <string name="height_hint">Рост</string>
    <string name="gender_text">Пол:</string>
    <string name="percent_text">Крепость:</string>
    <string name="save_text">Сохранить</string>
    <string name="edit_drink_list">Изменить список напитков</string>
    <string name="back_text">Назад</string>
    <string name="delete_text">Удалить</string>

    <string name="male">М</string>
    <string name="female">Ж</string>
    <string-array name="gender_array">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>

    <string name="success_save">Сохранено</string>

    <string name="empty_name_error">Имя не долно быть пустым</string>
    <string name="empty_weight_error">Вес не долн быть пустым</string>
    <string name="out_of_range_weight_error">Очень странный вес</string>
    <string name="empty_height_error">Рост не долн быть пустым</string>
    <string name="out_of_range_height_error">Очень странный рост</string>

    <string name="empty_drink_name">Имя напитка не должно быть пустым</string>
    <string name="empty_drink_percent">Крепость напитка не должна быть пустым</string>
    <string name="out_of_range_drink_percent">Очень странная крепость напитка</string>
    <string name="empty_drink_liter">Количество литров не должно быть пустым</string>
    <string name="out_of_range_drink_liter">Очень странное количество литров</string>

</resources>