<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/drink_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/edit_drink_layout_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="@dimen/drink_field_size"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textSize="@dimen/main_size" />

        <EditText
            android:id="@+id/drink_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/drink_name_hint"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drink_percent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/edit_drink_layout_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drink_name_layout">

        <TextView
            android:layout_width="@dimen/drink_field_size"
            android:layout_height="wrap_content"
            android:text="@string/percent_text"
            android:textSize="@dimen/main_size" />

        <EditText
            android:id="@+id/drink_percent_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="weight"
            android:hint="@string/percent_hint"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/drink_save_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        app:layout_constraintBottom_toTopOf="@+id/drink_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/drink_back_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_text"
        app:layout_constraintBottom_toTopOf="@+id/drink_remove_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/drink_remove_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>