<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/parameters_layout_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="@dimen/parameters_field_size"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textSize="@dimen/main_size" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/name_hint"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/weight_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/parameters_layout_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_layout">

        <TextView
            android:layout_width="@dimen/parameters_field_size"
            android:layout_height="wrap_content"
            android:text="@string/weight_text"
            android:textSize="@dimen/main_size" />

        <EditText
            android:id="@+id/weight_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="weight"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/height_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/parameters_layout_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_layout">

        <TextView
            android:layout_width="@dimen/parameters_field_size"
            android:layout_height="wrap_content"
            android:text="@string/height_text"
            android:textSize="@dimen/main_size" />

        <EditText
            android:id="@+id/height_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="height"
            android:hint="@string/height_hint"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/parameters_layout_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_layout">

        <TextView
            android:layout_width="@dimen/parameters_field_size"
            android:layout_height="wrap_content"
            android:text="@string/gender_text"
            android:textSize="@dimen/main_size" />

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:entries="@array/gender_array" />

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_layout" />

    <Button
        android:id="@+id/edit_drink_list_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_drink_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>