<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/edit_drink_layout_padding">

    <LinearLayout
        android:id="@+id/percent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/drink_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="percent"
                android:hint="@string/drink_name_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/drink_percent_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_drink_layout_padding"
                android:autofillHints="percent"
                android:hint="@string/percent_hint"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <Button
            android:id="@+id/add_drink_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/select_drink_layout_padding"
            android:text="@string/add" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/drink_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/select_drink_layout_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percent_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>